@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.299 (gritter) 3/22/05
+.\"     Sccsid: @(#)nail.1	2.300 (gritter) 6/9/05
 .\"
-.TH NAIL 1 "3/22/05" "nail 11.23" "User Commands"
+.TH NAIL 1 "6/9/05" "nail 11.23" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -184,6 +184,10 @@ variable specified in environment or startup files.
 Tilde escapes are disabled.
 The \fI\-r\fI address\fR options are passed to the mail transfer agent
 unless SMTP is used.
+This option exists for compatibility only;
+it is recommended to set the 
+.I from
+variable directly instead.
 .TP
 .BI \-s \ subject
 Specify subject on command line (only the first argument after the
@@ -192,7 +196,7 @@ flag is used as a subject; be careful to quote subjects
 containing spaces).
 .TP
 .BI \-T \ name
-Writes the `Message-Id' and `Article-Id' header fields
+Writes the `Message-Id:' and `Article-Id:' header fields
 of each message read in the file
 .IR name .
 Implies
@@ -322,7 +326,7 @@ given in the `In-Reply-To:' field
 or the last entry of the `References:' field
 of the current message.
 .TP
-.B -
+.B \-
 The next previous undeleted message,
 or the next previous deleted message for the
 .I undelete
@@ -562,7 +566,9 @@ While the user is composing a message,
 For instance, typing `~m' (alone on a line)
 will place a copy of the current message into the response
 right shifting it by a tabstop
-(see indentprefix variable, below).
+(see
+.I indentprefix
+variable, below).
 Other escapes will set up subject fields,
 add and delete recipients to the message,
 attach files to it
@@ -2023,10 +2029,25 @@ all MIME parts are included.
 .TP
 .B ~h
 Edit the message header fields
+`To:', `Cc:', `Bcc:', and `Subject:'
 by typing each one in turn
 and allowing the user to append text
 to the end or modify the field
 by using the current terminal erase and kill characters.
+.TP
+.B ~H
+Edit the message header fields
+`From:', `Reply-To:', and `Organization:'
+in the same manner as described for
+.IR ~h .
+The default values for these fields originate from the
+.IR from ,
+.IR replyto ,
+and
+.I ORGANIZATION
+variables.
+If this tilde command has been used,
+changing the variables has no effect on the current message anymore.
 .TP
 .BI ~i variable
 Insert the value of the specified variable
